[tool.poetry]
name = "wedoc"
version = "0.1.1"
description = ""
authors = ["wn <320753691@qq.com>"]
readme = "README.md"
packages = [{include = "wedoc"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"
commitizen = "^2.39.1"
mkdocs-material = "^9.0.5"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
