[tool.poetry]
name = "wedoc"
version = "0.1.17"
description = "企业微信文档接口, 包括文档的创建, 删除, 以及表格的操作"
authors = ["wn <320753691@qq.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "wedoc"}]
homepage = "https://wedoc.woni.link/"
repository = "https://github.com/wn0x00/wedoc"
documentation = "https://wedoc.woni.link/"
keywords = ["wework", "sheet"]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/wn0x00/wedoc/issues"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pre-commit = "^2.21.0"
commitizen = "^2.39.1"
mkdocs-material = "^9.0.5"
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
